--- a/src/layout/_layout.scss
+++ b/src/layout/_layout.scss
@@ -39,6 +39,27 @@ body {
     }
 }
 
+.nav {
+    left: 210px;
+    position: absolute;
+    top: 41px;
+    text-align: center;
+
+    li {
+        .inactive {
+            opacity: .5;
+        }
+        a.active {
+            opacity: 1;
+        }
+        list-style-type: none;
+        display: inline-block;
+        font-size: 1.4em;
+        font-weight: 500;
+        margin: 0 1.5em;
+    }
+}
+
 ui-view.overlay {
     z-index: 1000;
     bottom: $overlay-height;
@@ -80,7 +101,35 @@ ui-view.overlay {
     }
 }
 div.place-wrapper {
-    width: 1730px;
+    width: 100%;
     height: 100%;
     overflow: hidden;
+}
+div.filter-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    .module::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,.4) 100%);
+        z-index: 4;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    h2 {
+        color: white;
+        z-index: 5;
+        position: absolute;
+        bottom: 20px;
+
+        span {
+            opacity: .7;
+            margin-right: 0.5em;
+        }
+    }
 }
